# air-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
air/: __init__.py  client.py  wrapper.py
air/integrations/: __init__.py  crewai.py  langchain.py  openai.py
examples/: quickstart_crewai.py  quickstart_langchain.py  quickstart_openai.py
tests/: test_client.py  test_integrations.py  test_wrapper.py
